2005-12-18  Aidan Kehoe  <kehoea@parhasard.net>

	* chartab.c (Fmake_char_table):
	Set the default character class to word, not whitespace. 
	
2005-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* buffer.c:
	standard-syntax-table and standard-category-table are not
	available from Lisp any more, don't mention as Lisp variables. 
	
2005-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* console-x.c (x_perhaps_init_unseen_key_defaults):
	If the key name is a single character, and the keysym is NoSymbol,
	give it a default binding, if that is possible. This addresses the
	problem Zhang Wei points out in <871x118lc4.fsf@gmail.com>
	* event-Xt.c (x_to_emacs_keysym):
	Print the characters of a keysym's name directly if it's printable
	ASCII, or as an octal escape if it's not.

	Use keyboard-coding-system rather than undecided for decoding the
	keysym name passed to us by an input method. 
	* file-coding.c (vars_of_file_coding):
	Document that keyboard-coding-system is also used for X11. 

2005-11-29  Marcus Crestani  <crestani@xemacs.org>

	* xemacs.def.in.in: Condition error_check_* symbols on
	ERROR_CHECK_TYPES.

2005-11-29  Stephen J. Turnbull  <stephen@xemacs.org>

	* xemacs.def.in.in (error_check_cons, error_check_ldap):
	(error_check_opaque_ptr, error_check_pgconn, error_check_pgresult):
	(error_check_string, wrap_record_1, XINT_1): Add.  Patch by Rick
	Rankin <20051129041305.35172.qmail@web61022.mail.yahoo.com>.

2005-11-29  Stephen J. Turnbull  <stephen@xemacs.org>

	* xemacs.def.in.in (lrecord_uid_counter): Add it.  Patch by Rick
	Rankin <20051120054349.52906.qmail@web61019.mail.yahoo.com>.

2005-11-26  Stephen J. Turnbull  <stephen@xemacs.org>

	* dumper.c: Move comment to where it apparently belongs.

2005-11-27  Marcus Crestani  <crestani@xemacs.org>

	* lrecord.h: Remove NEWGC junk.

2005-11-27  Stephen J. Turnbull  <stephen@xemacs.org>

	Build fixes and dead code removal.
	
	* xft-fonts.c (Ffc_pattern_destroy): Delete.